[package]
name = "wol-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "=0.5.0"
log = "=0.4.28"
eyre = "=0.6.12"
color-eyre = "=0.6.5"
tokio = { version = "=1.47.1", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"time",
	"macros",
	"sync",
	"signal",
] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.143", features = ["preserve_order"] }
rumqttc = "=0.24.0"
rand = "=0.8.5"
config = "=0.15.15"
surf = { version = "=2.3.2", default-features = false, features = [
	"h1-client-rustls",
] }
wakey = "=0.3.0"
