[package]
name = "wol-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "=0.5.0"
log = "=0.4.29"
eyre = "=0.6.12"
color-eyre = "=0.6.5"
tokio = { version = "=1.49.0", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"time",
	"macros",
	"sync",
	"signal",
] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["preserve_order"] }
rumqttc = "=0.25.1"
rand = "=0.10.0"
config = "=0.15.19"
surf = { version = "=2.3.2", default-features = false, features = [
	"h1-client-rustls",
] }
wakey = "=0.3.0"
